--- a/Sigiriya.css
+++ b/Sigiriya.css
@@ -3,7 +3,10 @@
 .Sigiri{
     background-image: url(Images/bg.jpg);
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /*Body styling*/
