--- a/Styling.css
+++ b/Styling.css
@@ -3,37 +3,55 @@
 .home_p{
     background-image: url(Images/Home1.jpg);
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .beaches{
     background-image: url(Images/Unawatuna.jpg);
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .wildlife{
     background-image: url(Images/Wildlife.jpg);
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .Activity{
     background-image: url(Images/Beaches.jpg);
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .About{
     background-image: url(Images/buddha_img.jpg);
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .donate{
-    background-image: url(Images/Relic.jpg);
+    background-image: url(Images/Upcountry.jpg);
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /*Body styling*/
@@ -149,7 +167,7 @@ hr {
     padding: 2px 16px;
   }
 
-/* FORM */
+/* FORM Purchase*/
 
 * {
     box-sizing: border-box;
@@ -195,20 +213,73 @@ input[type=submit]:hover {
     background-color: #f2f2f2;
     padding: 20px;
 }
-  
-.column1 {
+
+.column1{
     float: left;
-    width: 25%;
-    margin-top: 6px;
+    width: 100%;
+    margin-top: 10px;
 }
-  
-.column2 {
+
+.column2{
     float: left;
-    width: 75%;
-    margin-top: 6px;
+    width: 100%;
+    margin-top: 10px;
 }
-  
-  .row:after {
+
+select{
+    width: 100%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: white;
+}
+
+input[type=button], input[type=submit], input[type=reset] {
+    background-color: #555555;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.donate_button{
+    background-color: lightskyblue;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+    padding: 15px 32px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+}
+
+.donate_button:hover{
+    box-shadow: 0 12px 16px 0 rgba(26, 26, 26, 0.24), 0 17px 50px 0 rgba(26, 26, 26, 0.24);
+}
+
+.order_button{
+    width: 50%;
+    background-color: lightskyblue;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+    padding: 15px 32px;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+}
+
+.order_button:hover{
+    box-shadow: 0 12px 16px 0 rgba(26, 26, 26, 0.24), 0 17px 50px 0 rgba(26, 26, 26, 0.24);
+}
+
+.row:after {
     content: "";
     display: table;
     clear: both;
@@ -225,6 +296,10 @@ input[type=submit]:hover {
     width: 100%;
     font-size: 24px;
 }
+
+/* FORM ACTIVITY */
+
+
 
 /*Home page containers*/
 
@@ -377,7 +452,7 @@ footer a:hover{
     display: block;
     color: white;
     text-align: center;
-    padding: 16px 16px;
+    padding: 15px 15px;
     background-repeat: no-repeat;
     background-size: 25px auto;
     background-position: .5em center;
@@ -429,37 +504,55 @@ background-image: url(Images/Icons/home.png);
     .home_p{
         background-image: url(Images/Home1.jpg);
         background-repeat: no-repeat;
-        background-size: auto 100%;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
     .beaches{
         background-image: url(Images/Unawatuna.jpg);
-        background-repeat: repeat;
-        background-size: 100% auto;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     
     .wildlife{
         background-image: url(Images/Wildlife.jpg);
-        background-repeat: repeat;
-        background-size: 100% auto;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
     .Activity{
         background-image: url(Images/Beaches.jpg);
         background-repeat: no-repeat;
-        background-size: 100% auto;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     
     .About{
         background-image: url(Images/buddha_img.jpg);
         background-repeat: no-repeat;
-        background-size: 100% auto;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
     
     .donate{
-        background-image: url(Images/Relic.jpg);
+        background-image: url(Images/Upcountry.jpg);
         background-repeat: no-repeat;
-        background-size: 100% auto;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
     #container_sec{
